<resources>
    <string name="app_name">NMedia</string>
    <string name="netology_logo">Netology Logo</string>
    <string name="number_of_likes">110К</string>
    <string name="number_of_views">777К</string>
    <string name="number_of_share">15</string>
    <string name="views">Views</string>
    <string name="to_share">To share</string>
    <string name="like_button">Like</string>
    <string name="menu_button">Menu Button</string>
    <string name="enter_text">Enter text</string>
    <string name="enter_confirmation">Enter the Confirmation</string>
    <string name="menu_item_edit">Edit</string>
    <string name="menu_item_delete">Delete</string>
    <string name="error_empty_content">Content cannot be empty</string>
    <string name="user_name">Dmitriy Dolgov</string>
    <string name="edit_image">Edit Image</string>
    <string name="undo_editing">Undo editing</string>
    <string name="chooser_share_post">Share post with..</string>
    <string name="add_post">Add new post</string>
    <string name="cancelEditing">Cancel editing</string>
    <string name="enter_video_link">Enter your video link here</string>
    <string name="error_url_validation">invalid url</string>
    <string name="error_play_video_validation">Something went wrong! The video cannot be played!!!</string>
    <string name="channel_remote_name">service notifications</string>
    <string name="channel_remote_description">notifications from a remote service</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_else_action">There have been changes in %1$s the post. Come in and take a look.</string>
    <string name="notification_user_share">User %1$s shared %2$s\'s post</string>
    <string name="notification_new_post">User %1$s created a new post</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="retry_saving">Network Error! Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here.\nOr drag down to load the list of posts</string>
    <string name="image_attachment">Image Attachment</string>
    <string name="new_posts">New Posts</string>
    <string name="menu_save">Save Post</string>
    <string name="description_take_photo">Take photo with camera</string>
    <string name="description_select_photo">Take photo from gallery</string>
    <string name="remove">Remove</string>
    <string name="description_photo">Description Photo</string>
    <string name="photo">Photo view in attachment of post</string>
    <string name="menu_copy_url">copy photo URL</string>
    <string name="Back">Back</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="sign_in" translatable="false">Sign in</string>
    <string name="sign_up" translatable="false">Sign up</string>
    <string name="sign_out" translatable="false">Sign out</string>
    <string name="server_error_string" translatable="false">"Server error"</string>
    <string name="registration" translatable="false">Registration</string>
    <string name="login" translatable="false">Login:</string>
    <string name="enter_login" translatable="false">Enter login</string>
    <string name="name_text" translatable="false">Name</string>
    <string name="enter_name" translatable="false">Enter name</string>
    <string name="password" translatable="false">Password</string>
    <string name="enter_password" translatable="false">Enter password</string>
    <string name="pass_conf" translatable="false">Confirm</string>
    <string name="add_avatar" translatable="false">Add avatar</string>
    <string name="сhoose_avatar" translatable="false">Choose avatar</string>
    <string name="enter" translatable="false">Enter</string>
    <string name="Registration_done" translatable="false">Registration complete, log in on the home screen</string>
    <string name="pass_miss" translatable="false">Password mismatch</string>
    <string name="authorization" translatable="false">Authorization</string>
    <string name="login_password_error" translatable="false">Wrong password andor login</string>
    <string name="authorization_required" translatable="false">Authorization required</string>
    <string name="authorize" translatable="false">Authorize</string>
    <string name="Exit_warning" translatable="false">Do you really want to exit?</string>
    <string name="notification_for_all" translatable="false">%1$s</string>
    <string name="channeremote_description" translatable="false">notifications from a remote server</string>
</resources>