<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    android:background="@color/colorLightGrey"
    style="@style/AppTheme"
    tools:context=".activity.AuthFragment">

    <TextView
        android:id="@+id/autorization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/authorization"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/autorization"
        android:layout_marginTop="75dp"
        android:layout_marginStart="@dimen/common_spacing"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_text"
        android:layout_marginStart="70dp"
        android:layout_toEndOf="@+id/user_text"
        android:hint="@string/enter_name"
        android:autofillHints="">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/user_text"
        android:layout_below="@+id/user_text"
        android:layout_marginTop="40dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_text"
        android:layout_alignStart="@+id/edit_login"
        android:hint="@string/enter_password"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:clickable="true"
        android:backgroundTint="@color/colorDarkGrey"
        android:text="@string/enter" />

</RelativeLayout>