<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.RegFragment">

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/registration"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/sv_container_registration_fields"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/reg_user_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginTop="75dp"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/reg_edit_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/reg_user_text"
                android:layout_marginStart="70dp"
                android:layout_toEndOf="@+id/reg_user_text"
                android:autofillHints=""
                android:hint="@string/enter_login">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/reg_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_user_text"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/common_spacing"
                android:layout_marginTop="40dp"
                android:text="@string/name_text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/reg_edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/reg_user_name"
                android:layout_marginStart="70dp"
                android:layout_toEndOf="@+id/reg_user_text"
                android:autofillHints=""
                android:hint="@string/enter_name">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/reg_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_user_name"
                android:layout_alignStart="@+id/reg_user_text"
                android:layout_marginTop="40dp"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/reg_edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/reg_edit_name"
                android:layout_alignBottom="@+id/reg_password_text"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/reg_confirmation_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_password_text"
                android:layout_alignStart="@+id/reg_user_text"
                android:layout_marginTop="40dp"
                android:text="@string/pass_conf"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <EditText
                android:id="@+id/reg_confirmation_edit_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/reg_edit_password"
                android:layout_alignBottom="@+id/reg_confirmation_password_text"
                android:hint="@string/enter_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/reg_avatar_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_confirmation_password_text"
                android:layout_alignStart="@+id/reg_user_text"
                android:layout_marginTop="40dp"
                android:text="@string/add_avatar"
                android:textAppearance="?android:attr/textAppearanceMedium" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/reg_button_add_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/reg_edit_password"
                android:layout_alignBottom="@+id/reg_avatar_text"
                android:background="@drawable/layout_back"
                android:hint="@string/сhoose_avatar"
                android:padding="5dp"
                android:textColorHint="@color/colorLightGrey" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reg_button_add_avatar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/colorDarkGrey"
                android:clickable="true"
                android:text="@string/enter" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>