<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/photoView"
        style="@style/PhotoFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/photo"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-64dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeButtonPhotoFragment"
        style="@style/AppCheckableButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:layout_marginStart="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/like_button"
        android:text="111"
        android:textAppearance="@style/TextStyle"
        android:elevation="2dp"
        app:icon="@drawable/selector_like"
        app:iconTint="@color/selector_like_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbBackFromPhotoFragment"
        style="@style/AppCheckableButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginStart="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/Back"
        android:elevation="2dp"
        app:iconTint="@color/colorLightGrey"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />





</androidx.constraintlayout.widget.ConstraintLayout>