<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing"
    tools:context=".activity.MainFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/netology_avatar_size"
        android:layout_height="@dimen/netology_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/netology_logo"
        app:layout_constraintBottom_toBottomOf="@id/barrierTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/avatars" />

    <TextView
        android:id="@+id/tvAuthorPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/ibMenu"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintBottom_toTopOf="@id/barrierTop"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toBottomOf="@id/tvAuthorPost"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ibMenu"
        style="@style/AppNormalButton"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu_button"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:iconGravity="end"
        app:iconTint="@color/colorMediumGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:autoLink="web"
        android:fontFamily="serif"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrierTop"
        tools:text="@sample/posts.json/data/content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likeButton"
        style="@style/AppCheckableButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/like_button"
        android:text="111"
        android:textAppearance="@style/TextStyle"
        app:icon="@drawable/selector_like"
        app:iconTint="@color/selector_like_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barrierBottom" />

    <ImageView
        android:id="@+id/postImageAttachment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:visibility="visible"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@id/barrierBottom"
        app:layout_constraintStart_toStartOf="@id/content"
        app:layout_constraintTop_toBottomOf="@id/content"
        android:contentDescription="@string/image_attachment" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="logo,ibMenu"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="80dp" />

</androidx.constraintlayout.widget.ConstraintLayout>