<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PostCardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/common_spacing">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logoPostFragment"
            android:layout_width="@dimen/netology_avatar_size"
            android:layout_height="@dimen/netology_avatar_size"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/netology_logo"
            app:layout_constraintBottom_toBottomOf="@id/barrierTopPhotoFragment"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@sample/avatars" />

        <TextView
            android:id="@+id/tvAuthorPostFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/publishedPostFragment"
            app:layout_constraintEnd_toStartOf="@id/ibMenuPostFragment"
            app:layout_constraintStart_toEndOf="@+id/logoPostFragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@sample/posts.json/data/author" />

        <TextView
            android:id="@+id/publishedPostFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            app:layout_constraintBottom_toBottomOf="@id/barrierTopPhotoFragment"
            app:layout_constraintStart_toEndOf="@id/logoPostFragment"
            app:layout_constraintTop_toBottomOf="@id/tvAuthorPostFragment"
            tools:text="@sample/posts.json/data/published" />

        <TextView
            android:id="@+id/tvEditedPostFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/barrierTopPhotoFragment"
            app:layout_constraintStart_toEndOf="@id/logoPostFragment"
            app:layout_constraintTop_toBottomOf="@id/publishedPostFragment"
            tools:text="@sample/posts.json/data/edited" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ibMenuPostFragment"
            style="@style/AppNormalButton"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/menu_button"
            app:icon="@drawable/ic_baseline_more_vert_24"
            app:iconGravity="end"
            app:iconTint="@color/colorMediumGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/contentPostFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:autoLink="web"
            android:fontFamily="serif"
            android:textAlignment="viewStart"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrierTopPhotoFragment"
            tools:text="@sample/posts.json/data/content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/likeButtonPostFragment"
            style="@style/AppCheckableButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginBottom="@dimen/common_spacing"
            android:background="@android:color/transparent"
            android:checkable="true"
            android:contentDescription="@string/like_button"
            android:text="111"
            android:textAppearance="@style/TextStyle"
            app:icon="@drawable/selector_like"
            app:iconTint="@color/selector_like_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/barrierBottomPostFragment" />

        <ImageView
            android:id="@+id/fragmentPostImageAttachment"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:visibility="gone"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="@id/contentPostFragment"
            app:layout_constraintBottom_toTopOf="@id/barrierBottomPostFragment"
            app:layout_constraintTop_toBottomOf="@id/contentPostFragment"
            android:contentDescription="@string/image_attachment" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierTopPhotoFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="logoPostFragment,publishedPostFragment,ibMenuPostFragment"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="80dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierBottomPostFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="contentPostFragment"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="80dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>